pulse: don't report timing if paused

Fixes #27137